<resources>
    <string name="app_name">TravelWithAndroidApp</string>
    <string name="loginInButtonCaption">Zaloguj</string>
    <string name="loginInWithFacebookCaption">Zaloguj przez facebooka</string>
    <string name="registerButtonCaption">Zarejestruj</string>
    <string name="title_activity_register">Register</string>
    <string name="registerCaption">Rejestracja</string>
    <string name="title_activity_travel_form">TravelFormActivity</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Hasło</string>
    <string name="repassword">Powtórz hasło</string>
    <string name="phoneNumber">Nr telefonu*</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">2114127058851168</string>
    <string name="fb_login_protocol_scheme">fb2114127058851168</string>
    <string name="recovery_password"><u>Przypomnij hasło</u></string>
</resources>
